engine/crates/engine-v2/query-solver/src/tests/snapshots/engine_v2_query_solver__tests__entities__nested_join-graph.snap
---
source: engine/crates/engine-v2/query-solver/src/tests/entities.rs
expression: "digraph {\n    0 [ label = \"root\" ]\n    1 [ label = \"stars\" ]\n    2 [ label = \"reviews\" ]\n    3 [ label = \"products\" ]\n    4 [ label = \"Root#category\", shape=parallelogram, color=dodgerblue ]\n    5 [ label = \"products#category\", shape=box, color=dodgerblue ]\n    6 [ label = \"Root#name\", shape=parallelogram, color=dodgerblue ]\n    7 [ label = \"products#name\", shape=box, color=dodgerblue ]\n    8 [ label = \"Root#price\", shape=parallelogram, color=dodgerblue ]\n    9 [ label = \"products#price\", shape=box, color=dodgerblue ]\n    10 [ label = \"FedEntity#review\", shape=parallelogram, color=dodgerblue ]\n    11 [ label = \"reviews#review\", shape=box, color=dodgerblue ]\n    12 [ label = \"stars#review\", shape=box, color=dodgerblue ]\n    13 [ label = \"*id\" ]\n    14 [ label = \"id#category\", shape=box, color=dodgerblue ]\n    15 [ label = \"id#name\", shape=box, color=dodgerblue ]\n    16 [ label = \"id#price\", shape=box, color=dodgerblue ]\n    0 -> 3 [ label = \"\" ]\n    0 -> 4 [ label = \"\", color=royalblue,fontcolor=royalblue ]\n    0 -> 4 [ label = \"\", style=dashed,arrowhead=none ]\n    4 -> 5 [ label = \"\", color=royalblue,fontcolor=royalblue ]\n    5 -> 3 [ label = \"\", color=violet,arrowhead=none ]\n    0 -> 6 [ label = \"\", color=royalblue,fontcolor=royalblue ]\n    0 -> 6 [ label = \"\", style=dashed,arrowhead=none ]\n    6 -> 7 [ label = \"\", color=royalblue,fontcolor=royalblue ]\n    7 -> 3 [ label = \"\", color=violet,arrowhead=none ]\n    0 -> 8 [ label = \"\", color=royalblue,fontcolor=royalblue ]\n    0 -> 8 [ label = \"\", style=dashed,arrowhead=none ]\n    8 -> 9 [ label = \"\", color=royalblue,fontcolor=royalblue ]\n    9 -> 3 [ label = \"\", color=violet,arrowhead=none ]\n    3 -> 2 [ label = \"\" ]\n    9 -> 10 [ label = \"\", color=royalblue,fontcolor=royalblue ]\n    3 -> 10 [ label = \"\", style=dashed,arrowhead=none ]\n    10 -> 11 [ label = \"\", color=royalblue,fontcolor=royalblue ]\n    11 -> 2 [ label = \"\", color=violet,arrowhead=none ]\n    2 -> 1 [ label = \"\" ]\n    11 -> 12 [ label = \"\", color=royalblue,fontcolor=royalblue ]\n    12 -> 1 [ label = \"\", color=violet,arrowhead=none ]\n    7 -> 10 [ label = \"\", color=royalblue,fontcolor=royalblue ]\n    5 -> 10 [ label = \"\", color=royalblue,fontcolor=royalblue ]\n    10 -> 13 [ label = \"\", color=orangered,arrowhead=inv ]\n    3 -> 13 [ label = \"\" ]\n    5 -> 14 [ label = \"\", color=royalblue,fontcolor=royalblue ]\n    14 -> 13 [ label = \"\", color=violet,arrowhead=none ]\n    7 -> 15 [ label = \"\", color=royalblue,fontcolor=royalblue ]\n    15 -> 13 [ label = \"\", color=violet,arrowhead=none ]\n    9 -> 16 [ label = \"\", color=royalblue,fontcolor=royalblue ]\n    16 -> 13 [ label = \"\", color=violet,arrowhead=none ]\n}\n"
---
digraph {
    0 [ root]
    1 [ stars]
    2 [ reviews]
    3 [ products]
    4 [ Root#category]
    5 [ products#category]
    6 [ Root#name]
    7 [ products#name]
    8 [ Root#price]
    9 [ products#price]
    10 [ FedEntity#review]
    11 [ reviews#review]
    12 [ stars#review]
    13 [ *id]
    14 [ id#category]
    15 [ id#name]
    16 [ id#price]
    0 -> 3 [ label = "Field" ]
    0 -> 4 [ label = "CreateChildResolver" ]
    0 -> 4 [ label = "HasChildResolver" ]
    4 -> 5 [ label = "CanProvide" ]
    5 -> 3 [ label = "Provides" ]
    0 -> 6 [ label = "CreateChildResolver" ]
    0 -> 6 [ label = "HasChildResolver" ]
    6 -> 7 [ label = "CanProvide" ]
    7 -> 3 [ label = "Provides" ]
    0 -> 8 [ label = "CreateChildResolver" ]
    0 -> 8 [ label = "HasChildResolver" ]
    8 -> 9 [ label = "CanProvide" ]
    9 -> 3 [ label = "Provides" ]
    3 -> 2 [ label = "Field" ]
    9 -> 10 [ label = "CreateChildResolver" ]
    3 -> 10 [ label = "HasChildResolver" ]
    10 -> 11 [ label = "CanProvide" ]
    11 -> 2 [ label = "Provides" ]
    2 -> 1 [ label = "Field" ]
    11 -> 12 [ label = "CanProvide" ]
    12 -> 1 [ label = "Provides" ]
    7 -> 10 [ label = "CreateChildResolver" ]
    5 -> 10 [ label = "CreateChildResolver" ]
    10 -> 13 [ label = "Requires" ]
    3 -> 13 [ label = "Field" ]
    5 -> 14 [ label = "CanProvide" ]
    14 -> 13 [ label = "Provides" ]
    7 -> 15 [ label = "CanProvide" ]
    15 -> 13 [ label = "Provides" ]
    9 -> 16 [ label = "CanProvide" ]
    16 -> 13 [ label = "Provides" ]
}
