engine/crates/engine-v2/query-solver/src/tests/snapshots/engine_v2_query_solver__tests__entities__nested_join_with_name-solver.snap
---
source: engine/crates/engine-v2/query-solver/src/tests/entities.rs
expression: "digraph {\n    0 [ label = \"root\", color=forestgreen ]\n    1 [ label = \"name\", style=dashed ]\n    2 [ label = \"stars\", style=dashed ]\n    3 [ label = \"Root#category\", shape=parallelogram, color=dodgerblue, style=dashed ]\n    4 [ label = \"products#category\", shape=box, color=dodgerblue, style=dashed ]\n    5 [ label = \"Root#name\", shape=parallelogram, color=dodgerblue, style=dashed ]\n    6 [ label = \"products#name\", shape=box, color=dodgerblue, style=dashed ]\n    7 [ label = \"Root#price\", shape=parallelogram, color=dodgerblue, style=dashed ]\n    8 [ label = \"products#price\", shape=box, color=dodgerblue, style=dashed ]\n    9 [ label = \"FedEntity#review\", shape=parallelogram, color=dodgerblue, style=dashed ]\n    10 [ label = \"reviews#review\", shape=box, color=dodgerblue, style=dashed ]\n    11 [ label = \"stars#review\", shape=box, color=dodgerblue, style=dashed ]\n    12 [ label = \"FedEntity#name\", shape=parallelogram, color=dodgerblue, style=dashed ]\n    13 [ label = \"name#name\", shape=box, color=dodgerblue, style=dashed ]\n    14 [ label = \"name#name\", shape=box, color=dodgerblue, style=dashed ]\n    15 [ label = \"*id\", style=dashed ]\n    16 [ label = \"id#category\", shape=box, color=dodgerblue, style=dashed ]\n    17 [ label = \"id#name\", shape=box, color=dodgerblue, style=dashed ]\n    18 [ label = \"id#price\", shape=box, color=dodgerblue, style=dashed ]\n    19 [ label=\"\", style=dashed]\n    0 -> 3 [ label = <<b>1</b>>, color=royalblue,fontcolor=royalblue,style=dashed ]\n    3 -> 4 [ label = \"\", color=royalblue,fontcolor=royalblue,style=dashed ]\n    0 -> 5 [ label = <<b>1</b>>, color=royalblue,fontcolor=royalblue,style=dashed ]\n    5 -> 6 [ label = \"\", color=royalblue,fontcolor=royalblue,style=dashed ]\n    0 -> 7 [ label = <<b>1</b>>, color=royalblue,fontcolor=royalblue,style=dashed ]\n    7 -> 8 [ label = \"\", color=royalblue,fontcolor=royalblue,style=dashed ]\n    8 -> 9 [ label = <<b>1</b>>, color=royalblue,fontcolor=royalblue,style=dashed ]\n    9 -> 10 [ label = \"\", color=royalblue,fontcolor=royalblue,style=dashed ]\n    10 -> 11 [ label = \"\", color=royalblue,fontcolor=royalblue,style=dashed ]\n    11 -> 2 [ label = \"\", color=royalblue,fontcolor=royalblue,style=dashed ]\n    8 -> 12 [ label = <<b>1</b>>, color=royalblue,fontcolor=royalblue,style=dashed ]\n    12 -> 13 [ label = \"\", color=royalblue,fontcolor=royalblue,style=dashed ]\n    13 -> 1 [ label = \"\", color=royalblue,fontcolor=royalblue,style=dashed ]\n    6 -> 9 [ label = <<b>1</b>>, color=royalblue,fontcolor=royalblue,style=dashed ]\n    6 -> 14 [ label = \"\", color=royalblue,fontcolor=royalblue,style=dashed ]\n    14 -> 1 [ label = \"\", color=royalblue,fontcolor=royalblue,style=dashed ]\n    4 -> 9 [ label = <<b>1</b>>, color=royalblue,fontcolor=royalblue,style=dashed ]\n    4 -> 12 [ label = <<b>1</b>>, color=royalblue,fontcolor=royalblue,style=dashed ]\n    4 -> 16 [ label = \"\", color=royalblue,fontcolor=royalblue,style=dashed ]\n    16 -> 15 [ label = \"\", color=royalblue,fontcolor=royalblue,style=dashed ]\n    6 -> 17 [ label = \"\", color=royalblue,fontcolor=royalblue,style=dashed ]\n    17 -> 15 [ label = \"\", color=royalblue,fontcolor=royalblue,style=dashed ]\n    8 -> 18 [ label = \"\", color=royalblue,fontcolor=royalblue,style=dashed ]\n    18 -> 15 [ label = \"\", color=royalblue,fontcolor=royalblue,style=dashed ]\n    19 -> 0 [ label = \"\", color=royalblue,fontcolor=royalblue,style=dashed ]\n}\n"
---
digraph {
    0 [ label = "root", steiner=1 ]
    1 [ label = "name", steiner=0 ]
    2 [ label = "stars", steiner=0 ]
    3 [ label = "Root#category", steiner=0 ]
    4 [ label = "products#category", steiner=0 ]
    5 [ label = "Root#name", steiner=0 ]
    6 [ label = "products#name", steiner=0 ]
    7 [ label = "Root#price", steiner=0 ]
    8 [ label = "products#price", steiner=0 ]
    9 [ label = "FedEntity#review", steiner=0 ]
    10 [ label = "reviews#review", steiner=0 ]
    11 [ label = "stars#review", steiner=0 ]
    12 [ label = "FedEntity#name", steiner=0 ]
    13 [ label = "name#name", steiner=0 ]
    14 [ label = "name#name", steiner=0 ]
    15 [ label = "*id", steiner=0 ]
    16 [ label = "id#category", steiner=0 ]
    17 [ label = "id#name", steiner=0 ]
    18 [ label = "id#price", steiner=0 ]
    19 [ label="", style=dashed]
    0 -> 3 [ cost=1, steiner=0]
    3 -> 4 [ cost=0, steiner=0]
    0 -> 5 [ cost=1, steiner=0]
    5 -> 6 [ cost=0, steiner=0]
    0 -> 7 [ cost=1, steiner=0]
    7 -> 8 [ cost=0, steiner=0]
    8 -> 9 [ cost=1, steiner=0]
    9 -> 10 [ cost=0, steiner=0]
    10 -> 11 [ cost=0, steiner=0]
    11 -> 2 [ cost=0, steiner=0]
    8 -> 12 [ cost=1, steiner=0]
    12 -> 13 [ cost=0, steiner=0]
    13 -> 1 [ cost=0, steiner=0]
    6 -> 9 [ cost=1, steiner=0]
    6 -> 14 [ cost=0, steiner=0]
    14 -> 1 [ cost=0, steiner=0]
    4 -> 9 [ cost=1, steiner=0]
    4 -> 12 [ cost=1, steiner=0]
    4 -> 16 [ cost=0, steiner=0]
    16 -> 15 [ cost=0, steiner=0]
    6 -> 17 [ cost=0, steiner=0]
    17 -> 15 [ cost=0, steiner=0]
    8 -> 18 [ cost=0, steiner=0]
    18 -> 15 [ cost=0, steiner=0]
    19 -> 0 [ cost=0, steiner=0]
}
